[package]
name = "audio_epistles"
version = "1.4.0"
edition = "2021"
license = "MIT"
authors = [
    "Christian Mbaba <mxlightningx@gmail.com>",
    "Dominion Chapel Houston <media@dominionchapel.org>",
]

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
fantoccini = "0.22"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
youtube_dl = "0.10"
