[package]
name = "audio_epistles"
version = "2.2.6"
edition = "2021"
license = "MIT"
authors = [
    "Christian Mbaba <mxlightningx@gmail.com>",
    "Dominion Chapel Houston <media@dominionchapel.org>",
]

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
fantoccini = "0.22.0"
rand = "0.9.2"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["json"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.47.1", features = ["full"] }
youtube_dl = "0.10.0"
