[package]
name = "audio_epistles"
version = "2.4.0"
edition = "2021"
license = "MIT"
authors = [
    "Christian Mbaba <mxlightningx@gmail.com>",
    "Dominion Chapel Houston <media@dominionchapel.org>",
]

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
fantoccini = "0.22.0"
rand = "0.9.2"
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["json"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
youtube_dl = "0.10.0"
